--- a/frontend/web/css/creative.css
+++ b/frontend/web/css/creative.css
@@ -3,7 +3,7 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
-
+@import url('preloader.css');
 html,
 body {
     width: 100%;
@@ -490,3 +490,11 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: #222;
 }
+
+
+.bg-regis{
+    background-color: rgb(247, 247, 247);
+}
+
+
+
